OpenTelemetry Jaeger local setup

--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -21,5 +21,7 @@
     "Oidc:ClientId": "625fa04a-4b17-4727-8066-82cf5b5a8b0d",
     "Oidc:ClientSecret": "not-the-secret",
     "Oidc:AuthorityCallbackUri": "https://oidcdebugger.com/debug",
-    "Oidc:FrontendRedirectUri": "https://example.com"
+    "Oidc:FrontendRedirectUri": "https://example.com",
+    "Jaeger:AgentHost": "localhost",
+    "Jaeger:AgentPort": 6831
 }
