--- a/domains/auth/docker-environment/docker-compose.yml
+++ b/domains/auth/docker-environment/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres
-    container_name: local_pgdb
+    container_name: postgres
     restart: always
     ports:
       - "5432:5432"
@@ -10,11 +10,11 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
     volumes:
-      - local_pgdata:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
-    container_name: pgadmin4_container
+    container_name: pgadmin
     restart: always
     ports:
       - "5050:80"
@@ -24,7 +24,7 @@ services:
       PGADMIN_CONFIG_SERVER_MODE: "False"
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
     volumes:
-      - pgadmin-data:/var/lib/pgadmin
+      - pgadmin:/var/lib/pgadmin
 
   prometheus:
     image: prom/prometheus:latest
@@ -42,5 +42,5 @@ services:
       - "6831:6831/udp"
 
 volumes:
-  local_pgdata:
-  pgadmin-data:
+  postgres:
+  pgadmin:
