Rename test classes

--- a/domains/emissions/Emissions.API/Tests/Tests.csproj
+++ b/domains/emissions/Emissions.API/Tests/Tests.csproj
@@ -33,4 +33,10 @@
     <None Include="Resources/**" CopyToOutputDirectory="PreserveNewest" LinkBase="Resources/" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="SwaggerTests.GetSwaggerDoc_AppStarted_NoChangesAccordingToSnapshot.verified.txt">
+      <DependentUpon>SwaggerTests.cs</DependentUpon>
+    </None>
+  </ItemGroup>
+
 </Project>
