--- a/domains/auth/chart/Chart.yaml
+++ b/domains/auth/chart/Chart.yaml
@@ -4,3 +4,8 @@ description: A chart containing the auth domain.
 
 type: application
 version: 0.0.28
+
+dependencies:
+- name: postgresql
+  version: 12.2.2
+  repository: https://charts.bitnami.com/bitnami
