--- a/domains/auth/chart/templates/api-deployment.yaml
+++ b/domains/auth/chart/templates/api-deployment.yaml
@@ -15,9 +15,14 @@ spec:
       labels:
         app: {{ .Release.Name }}-api
     spec:
+      volumes:
+        - name: {{ .Release.Name }}-api-volume
+          configMap:
+            name: auth-configmap
       containers:
         - name: {{ .Release.Name }}-api
-          image: '{{ .Values.api.image.name }}:{{ .Values.api.image.tag }}'
+          image: '{{ .Values.api.image.name }}'
+          imagePullPolicy: IfNotPresent
           readinessProbe:
             httpGet:
               path: /healthz
@@ -26,14 +31,11 @@ spec:
             httpGet:
               path: /healthz
               port: http
+          volumeMounts:
+            - name: {{ .Release.Name }}-api-volume
+              mountPath: /app/appsettings.json
+              subPath: appsettings.json
           ports:
             - containerPort: 80
               name: http
               protocol: TCP
-          env:
-          {{- if .Values.api.env}}
-          {{- range $name, $value := .Values.api.env }}
-            - name: {{ $name }}
-              value: {{ $value | quote }}
-          {{- end}}
-          {{- end}}
