--- a/domains/auth/chart/templates/api-deployment.yaml
+++ b/domains/auth/chart/templates/api-deployment.yaml
@@ -35,7 +35,7 @@ spec:
               value: {{ .Values.api.cryptography.key }}
 
             - name: Terms__CurrentVersion
-              value: {{ .Values.api.terms.currentVersion }}
+              value: {{ .Values.api.terms.currentVersion | quote }}
 
             - name: ConnectionStrings__Db
               value: {{ .Values.api.connections.db }}
