use options for registry url

--- a/domains/certificates/Query.API/API/appsettings.Development.json
+++ b/domains/certificates/Query.API/API/appsettings.Development.json
@@ -16,5 +16,8 @@
         "Port": 5672,
         "Username": "guest",
         "Password": "guest"
+    },
+    "Registry": {
+        "Url": "http://registry" 
     }
 }
