--- a/domains/oidc-mock/API/Mock/appsettings.Development.json
+++ b/domains/oidc-mock/API/Mock/appsettings.Development.json
@@ -1,14 +1,15 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-    "Default": "Information",
-    "Microsoft.AspNetCore": "Warning"
-    }
-  },
-
-  "USERS_FILE_PATH": "SettingFiles/development-users.json",
-  "CLIENT_ID": "energy-origin",
-  "CLIENT_SECRET": "secret_secret_secret",
-  "CLIENT_REDIRECT_URI": "https://localhost:7124"
+    "DetailedErrors": true,
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "USERS_FILE_PATH": "SettingFiles/development-users.json",
+    "CLIENT_ID": "energy-origin",
+    "CLIENT_SECRET": "secret_secret_secret",
+    "CLIENT_REDIRECT_URI": "https://localhost:7124",
+    "PATH_BASE": "/",
+    "HOST": "localhost:5203"
 }
