--- a/domains/auth/chart/values.yaml
+++ b/domains/auth/chart/values.yaml
@@ -21,3 +21,10 @@ api:
     Oidc__CacheDuration:
     Oidc__AuthorityCallbackUri:
     Oidc__FrontendRedirectUri:
+  setup:
+    database:
+      PGHOST:
+      PGUSER:
+      PGPASSWORD:
+      PGNAME:
+      PGPORT:
