--- a/domains/auth/chart/templates/api-init-db-cm.yaml
+++ b/domains/auth/chart/templates/api-init-db-cm.yaml
@@ -7,6 +7,7 @@ metadata:
     internal.config.kubernetes.io/needsHashSuffix: enabled
 data:
   run.sh: |
+    pg_isready -U ${PGUSER:-postgres} -h ${PGHOST:-localhost} -p ${PGPORT:-5432}
     psql ${PGNAME:-postgres} -U ${PGUSER:-postgres} -p ${PGPORT:-5432} -h ${PGHOST:-localhost} -f /sql/migrations.sql
   migrations.sql: |-
 {{ .Files.Get "migrations.sql" | indent 4 }}
