--- a/domains/emissions/Emissions.API/Tests/Tests.csproj
+++ b/domains/emissions/Emissions.API/Tests/Tests.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="Verify.Xunit" Version="19.10.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.categories" Version="2.0.6" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -29,6 +31,12 @@
 
   <ItemGroup>
     <None Include="Resources/**" CopyToOutputDirectory="PreserveNewest" LinkBase="Resources/" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="SwaggerTests.GetSwaggerDoc_AppStarted_NoChangesAccordingToSnapshot.verified.txt">
+      <DependentUpon>SwaggerTests.cs</DependentUpon>
+    </None>
   </ItemGroup>
 
 </Project>
