--- a/domains/oidc-mock/API/Mock/Dockerfile
+++ b/domains/oidc-mock/API/Mock/Dockerfile
@@ -1,9 +1,9 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build
 WORKDIR /src
 COPY ["API/Mock/Oidc.Mock.csproj", "API/Mock/"]
 RUN dotnet restore "API/Mock/Oidc.Mock.csproj"
@@ -15,6 +15,10 @@ FROM build AS publish
 RUN dotnet publish "Oidc.Mock.csproj" -c Release -o /app/publish
 
 FROM base AS final
+
+RUN apk add --no-cache tzdata
+
 WORKDIR /app
 COPY --from=publish /app/publish .
+HEALTHCHECK CMD wget -qO- http://localhost:80/healthz > /dev/null || exit 1
 ENTRYPOINT ["dotnet", "Oidc.Mock.dll"]
