--- a/domains/auth/chart/templates/api-init-db-cm.yaml
+++ b/domains/auth/chart/templates/api-init-db-cm.yaml
@@ -8,6 +8,6 @@ metadata:
 data:
   run.sh: |
     pg_isready -U ${PGUSER:-postgres} -h ${PGHOST:-localhost} -p ${PGPORT:-5432}
-    psql ${PGNAME:-postgres} -U ${PGUSER:-postgres} -p ${PGPORT:-5432} -h ${PGHOST:-localhost} -f /sql/migrations.sql
-  migrations.sql: |-
-{{ .Files.Get "migrations.sql" | indent 4 }}
+    psql ${PGNAME:-postgres} -U ${PGUSER:-postgres} -p ${PGPORT:-5432} -h ${PGHOST:-localhost} -f /sql/API.migrations.sql
+  API.migrations.sql: |-
+{{ .Files.Get "API.migrations.sql" | indent 4 }}
