--- a/.github/actions/dotnet-validate-domain/action.yaml
+++ b/.github/actions/dotnet-validate-domain/action.yaml
@@ -45,7 +45,23 @@ runs:
       working-directory: ${{ inputs.solution-file-folder }}
       run: dotnet format --verify-no-changes -v diag
 
-    # FIXME: add optional sql generation check
+    - name: Migration
+      shell: bash
+      working-directory: ${{ inputs.solution-file-folder }}
+      run: |
+        for service in $(find . -name "*.csproj"); do
+          dotnet list "$service" package --format=json | grep 'Microsoft.EntityFrameworkCore"' >/dev/null || continue
+          name=$(basename "$service" .csproj)
+          dotnet ef migrations script -i  --no-build --project "$service" -o "/tmp/${name}.migrations.sql"
+        done
+
+        for tmp in $(find /tmp/ -maxdepth 1 -name "*.migrations.sql"); do
+          echo Checking $(basename "$tmp")
+          original=../chart/$(basename "$tmp")
+          cat < "$tmp" | sed '/INSERT INTO "__EFMigrationsHistory"/,/);$/d' > /tmp/a
+          cat < "$original" | sed '/INSERT INTO "__EFMigrationsHistory"/,/);$/d' > /tmp/b
+          diff -q /tmp/a /tmp/b >/dev/null || exit 1
+        done
 
     - name: Test
       shell: bash
