--- a/domains/auth/Auth.API/API/appsettings.json
+++ b/domains/auth/Auth.API/API/appsettings.json
@@ -5,7 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "Jaeger:AgentHost": "localhost",
-    "Jaeger:AgentPort": 6831
+    "AllowedHosts": "*"
 }
