--- a/domains/auth/Auth.API/Integration.Tests/Integration.Tests.csproj
+++ b/domains/auth/Auth.API/Integration.Tests/Integration.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -14,7 +14,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.0" />
-    <PackageReference Include="Testcontainers" Version="2.4.0" />
+    <PackageReference Include="Testcontainers.PostgreSql" Version="3.0.0" />
     <PackageReference Include="WireMock.Net" Version="1.5.16" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
