--- a/libraries/dotnet/EnergyOriginTokenValidation/EnergyOriginTokenValidation.Unit.Tests/EnergyOriginTokenValidation.Unit.Tests.csproj
+++ b/libraries/dotnet/EnergyOriginTokenValidation/EnergyOriginTokenValidation.Unit.Tests/EnergyOriginTokenValidation.Unit.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\libraries\dotnet\AuthLibrary\AuthLibrary\AuthLibrary.csproj" />
+    <ProjectReference Include="..\EnergyOriginTokenValidation\EnergyOriginTokenValidation.csproj" />
   </ItemGroup>
 
 </Project>
