--- a/.github/actions/dotnet-publish-nuget-package/action.yaml
+++ b/.github/actions/dotnet-publish-nuget-package/action.yaml
@@ -31,7 +31,7 @@ runs:
     - uses: actions/checkout@v3
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@3
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ inputs.dotnet-version }}
 
