--- a/libraries/dotnet/EnergyOriginTokenValidation/EnergyOriginTokenValidation/EnergyOriginTokenValidation.csproj
+++ b/libraries/dotnet/EnergyOriginTokenValidation/EnergyOriginTokenValidation/EnergyOriginTokenValidation.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Options\" />
+  </ItemGroup>
+
 </Project>
