rename solution etc

--- a/libraries/dotnet/EnergyOrigin.TokenValidation/EnergyOrigin.TokenValidation.Unit.Tests/EnergyOrigin.TokenValidation.Unit.Tests.csproj
+++ b/libraries/dotnet/EnergyOrigin.TokenValidation/EnergyOrigin.TokenValidation.Unit.Tests/EnergyOrigin.TokenValidation.Unit.Tests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EnergyOriginTokenValidation\EnergyOriginTokenValidation.csproj" />
+    <ProjectReference Include="..\EnergyOrigin.TokenValidation\EnergyOrigin.TokenValidation.csproj" />
   </ItemGroup>
 
 </Project>
