Add actor/subject claim + providerId refactoring + various stuff

--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -25,6 +25,7 @@
     "Jaeger:AgentHost": "localhost",
     "Jaeger:AgentPort": 6831,
     "IdentityProvider:Providers": [
+        "MitIdPrivate",
         "NemIdProfessional"
     ]
 }
