Prepare chart for auth domain (#264)
Co-authored-by: Morten Munck Hansen <MOQ@energinet.dk>
Co-authored-by: AFY <AFY@energinet.dk>

--- a/.github/actions/dotnet-validate-domain/action.yaml
+++ b/.github/actions/dotnet-validate-domain/action.yaml
@@ -54,3 +54,23 @@ runs:
       shell: bash
       working-directory: ${{ inputs.solution-file-folder }}
       run: dotnet build --no-restore --configuration Release
+
+    - name: Migration
+      shell: bash
+      working-directory: ${{ inputs.solution-file-folder }}
+      run: |
+        for service in $(find . -name "*.csproj"); do
+          dotnet list "$service" package --format=json | grep 'Microsoft.EntityFrameworkCore"' >/dev/null || continue
+          name=$(basename "$service" .csproj)
+          echo Generating $name
+          dotnet tool list -g | grep dotnet-ef >/dev/null || dotnet tool install --global dotnet-ef >/dev/null
+          dotnet ef migrations script -i  --no-build --project "$service" -o "/tmp/${name}.migrations.sql"
+        done
+
+        for tmp in $(find /tmp/ -maxdepth 1 -name "*.migrations.sql"); do
+          echo Checking $(basename "$tmp")
+          original=../chart/$(basename "$tmp")
+          cat < "$tmp" | sed '/INSERT INTO "__EFMigrationsHistory"/,/);$/d' > /tmp/a
+          cat < "$original" | sed '/INSERT INTO "__EFMigrationsHistory"/,/);$/d' > /tmp/b
+          diff -q /tmp/a /tmp/b >/dev/null || exit 1
+        done
