--- a/domains/auth/Auth.API/API/Dockerfile
+++ b/domains/auth/Auth.API/API/Dockerfile
@@ -15,6 +15,9 @@ FROM build AS publish
 RUN dotnet publish "API.csproj" -c Release -o /app/publish
 
 FROM base AS final
+
+RUN apk add --no-cache tzdata
+
 WORKDIR /app
 COPY --from=publish /app/publish .
 HEALTHCHECK CMD wget -qO- http://localhost:80/healthz > /dev/null || exit 1
