--- a/domains/auth/chart/Chart.yaml
+++ b/domains/auth/chart/Chart.yaml
@@ -3,4 +3,9 @@ name: eo-auth
 description: A chart containing the auth domain.
 
 type: application
-version: 0.0.30
+version: 0.0.31
+
+dependencies:
+- name: postgresql-ha
+  version: 11.1.6
+  repository: https://charts.bitnami.com/bitnami
