--- a/domains/auth/chart/templates/api-deployment.yaml
+++ b/domains/auth/chart/templates/api-deployment.yaml
@@ -15,23 +15,46 @@ spec:
       labels:
         app: {{ .Release.Name }}-api
     spec:
+      volumes:
+        - name: migrations
+          configMap:
+            name: {{ .Release.Name }}-api-init-db-cm
+      initContainers:
+        - name: {{ .Release.Name }}-api-init-db
+          image: postgres:alpine3.17
+          command:
+            - /bin/sh
+          args:
+            - -e
+            - /sql/run.sh
+          {{- if .Values.api.setup.database}}
+          env:
+          {{- range $name, $value := .Values.api.setup.database }}
+            - name: {{ $name }}
+              value: {{ $value | quote }}
+          {{- end}}
+          {{- end}}
+          volumeMounts:
+            - name: migrations
+              mountPath: /sql
+              readOnly: true
       containers:
         - name: {{ .Release.Name }}-api
           image: '{{ .Values.api.image.name }}:{{ .Values.api.image.tag }}'
           readinessProbe:
             httpGet:
-              path: /health
+              path: /healthz
               port: http
           livenessProbe:
             httpGet:
-              path: /health
+              path: /healthz
               port: http
           ports:
             - containerPort: 80
               name: http
               protocol: TCP
-          env:
           {{- if .Values.api.env}}
+          env:
           {{- range $name, $value := .Values.api.env }}
             - name: {{ $name }}
               value: {{ $value | quote }}
