--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -25,7 +25,7 @@
     "Jaeger:AgentHost": "localhost",
     "Jaeger:AgentPort": 6831,
     "IdentityProvider:Providers": [
-        "MitIdPrivate",
-        "NemIdProfessional"
+        "MitID_Private",
+        "NemID_Professional"
     ]
 }
