--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -29,6 +29,8 @@
     "Jaeger:AgentPort": 6831,
     "IdentityProvider:Providers": [
         "MitID_Private",
+        "MitID_Professional",
+        "NemID_Private",
         "NemID_Professional"
     ]
 }
