--- a/domains/certificates/RegistryConnector/RegistryConnector/RegistryConnector.csproj
+++ b/domains/certificates/RegistryConnector/RegistryConnector/RegistryConnector.csproj
@@ -1,13 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
-    <UserSecretsId>dotnet-RegistryConnector-47a92002-e368-453f-8291-c5c8d042ef3e</UserSecretsId>
+    <UserSecretsId>c55e4dee-e6a8-4b4a-aadb-61d75fb92b03</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
   </ItemGroup>
+
 </Project>
