--- a/domains/certificates/RegistryConnector/RegistryConnector/RegistryConnector.csproj
+++ b/domains/certificates/RegistryConnector/RegistryConnector/RegistryConnector.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="ProjectOrigin.Electricity.Client" Version="0.1.0-alpha.18" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Expressions" Version="3.4.1" />
   </ItemGroup>
