--- a/domains/certificates/RegistryConnector/RegistryConnector/appsettings.Development.json
+++ b/domains/certificates/RegistryConnector/RegistryConnector/appsettings.Development.json
@@ -6,7 +6,6 @@
         }
     },
     "Registry": {
-        "Url": "http://localhost:8765",
-        "IssuerPrivateKeyPem": "no-secret"
+        "Url": "http://localhost:8765"
     }
 }
